[package]
name = "uncommitted-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uncommitted"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
async-recursion = "1.0.2"
clap = { version = "3.1.15", features = ["derive"] }
futures = "0.3.27"
tokio = { version = "1.26.0", features = [
  "fs",
  "macros",
  "process",
  "rt-multi-thread",
  "sync",
] }
